# pico_buck

./: .gitignore  README.md
pico_buck_board/: pico_buck_board.kicad_pcb  pico_buck_board.kicad_prl  pico_buck_board.kicad_pro  pico_buck_board.kicad_sch  sync_buck.kicad_sch
pico_buck_sw/: CMakeLists.txt  pico_buck.c  sync_buck_pwm.pio
